--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
       <div class="container">
-        <img src="image/nadiah.jpg" alt="Nadiah Ratnaduhita" width="250px" class="rounded-circle img-thumbnail" />
+        <img src="image/nadiah.jpg" alt="Nadiah Ratnaduhita" width="250px" class="rounded-circle img-thumbnail mb-3" />
         <h1 class="display-5">Nadiah Ratnaduhita</h1>
         <p class="lead mb-3">Mahasiswa Sistem Informasi ITTelkom Surabaya</p>
         <!-- button desc -->
@@ -73,7 +73,7 @@
         <div class="container collapse" id="collapse">
           <div class="row justify-content-center">
             <div class="col-5">
-              <p class="desc">Mahasiswa Sistem Informasi ITTelkom Surabaya This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered</p>
+              <p class="desc"><i>“For the things we have to learn before we can do them, we learn by doing them.” ― Aristotle</i></p>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-10 mb-5 fs-6">
+          <div class="col-md-8 mb-5 fs-6">
             <table class="text-sm-start table-sm">
               <tr>
                 <h4>Identitas Diri</h4>
@@ -128,20 +128,22 @@
               </tr>
             </table>
           </div>
-          <div class="col-md-10 fs-6">
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 fs-6">
             <h4>Pendidikan</h4>
             <ol class="list-group">
-              <li class="list-group-flush d-flex justify-content-between align-items-start mb-2">
+              <li class="list-group-flush d-flex align-items-start mb-2">
                 <div class="ms-2 me-auto pe-5">Institut Teknologi Telkom Surabaya</div>
-                <span class="badge bg-danger rounded">&ensp;2019 - sekarang&ensp;</span>
+                <span class="badge bg-danger">&ensp;2019 - sekarang&ensp;</span>
               </li>
-              <li class="list-group-flush d-flex justify-content-between align-items-start mb-2">
+              <li class="list-group-flush d-flex align-items-start mb-2">
                 <div class="ms-2 me-auto pe-5">SMK Telkom Malang</div>
-                <span class="badge bg-danger rounded">&ensp;&ensp;&ensp;2017 - 2019&ensp;&ensp;&ensp;</span>
+                <span class="badge bg-danger">&ensp;&ensp;&ensp;2017 - 2019&ensp;&ensp;&ensp;</span>
               </li>
-              <li class="list-group-flush d-flex justify-content-between align-items-start mb-2">
+              <li class="list-group-flush d-flex align-items-start mb-2">
                 <div class="ms-2 me-auto pe-5">SMP Negeri 4 Waru</div>
-                <span class="badge bg-danger rounded">&ensp;&ensp;&ensp;2013 - 2017&ensp;&ensp;&ensp;</span>
+                <span class="badge bg-danger">&ensp;&ensp;&ensp;2013 - 2017&ensp;&ensp;&ensp;</span>
               </li>
             </ol>
           </div>
@@ -243,19 +245,19 @@
         </div>
         <div class="row justify-content-center mb-3">
           <div class="col-md-1 text-center mb-3">
-            <a href="https://mail.google.com/mail/u/1/#inbox"><img src="image/icon/email.png" style="width: 75%" /></a>
+            <a href="https://mail.google.com/mail/u/1/#inbox"><img src="image/icon/email.png" width="75" /></a>
             <p>Email</p>
           </div>
           <div class="col-md-1 text-center mb-3">
-            <a href="https://www.instagram.com/nadiahrtd/"><img src="image/icon/instagram.png" style="width: 75%" /></a>
+            <a href="https://www.instagram.com/nadiahrtd/"><img src="image/icon/instagram.png" width="75" /></a>
             <p>Instagram</p>
           </div>
           <div class="col-md-1 text-center mb-3">
-            <a href="https://wa.link/blvbhf"><img src="image/icon/whatsapp.png" style="width: 75%" /></a>
+            <a href="https://wa.link/blvbhf"><img src="image/icon/whatsapp.png" width="75" /></a>
             <p>Whatsapp</p>
           </div>
           <div class="col-md-1 text-center mb-3">
-            <a href="https://nadiahr.wordpress.com/"><img src="image/icon/wordpress.png" style="width: 75%" /></a>
+            <a href="https://nadiahr.wordpress.com/"><img src="image/icon/wordpress.png" width="75" /></a>
             <p>Wordpress</p>
           </div>
         </div>
